--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   app:
     build: .
+    image: your-dockerhub-username/your-app-name:latest
     ports:
       - "3000:3000"
     env_file:
@@ -11,6 +12,8 @@ services:
     command: npm start
     depends_on:
       - db
+    networks:
+      - app-network
 
   db:
     image: mariadb:latest
@@ -24,6 +27,8 @@ services:
     volumes:
       - db_data:/var/lib/mysql
       - ./mariadb-config:/etc/mysql/conf.d
+    networks:
+      - app-network
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -35,6 +40,8 @@ services:
       - "8080:80"
     depends_on:
       - db
+    networks:
+      - app-network
 
   apache:
     image: httpd:latest
@@ -42,6 +49,11 @@ services:
       - "80:80"
     volumes:
       - ./public-html:/usr/local/apache2/htdocs/
+    networks:
+      - app-network
 
 volumes:
   db_data:
+
+networks:
+  app-network:
